--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,4 @@
 
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -9,6 +8,22 @@
 
   <body>
     <div id="app"></div>
+
+    <script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
+		<script>
+		  // Initialize Firebase
+		  var config = {
+		    apiKey: "AIzaSyCjBkZwRLcRV4aP_8Nv_iPfjX-gcv-Hnnk",
+		    authDomain: "react-bootstrap-crud-40-2f8a3.firebaseapp.com",
+		    databaseURL: "https://react-bootstrap-crud-40-2f8a3.firebaseio.com",
+		    storageBucket: "react-bootstrap-crud-40-2f8a3.appspot.com",
+		    messagingSenderId: "1045302891358"
+		  };
+		  firebase.initializeApp(config);
+		</script>
+
     <script src="client.min.js"></script>
   </body>
 </html>
+
+
